# DMagick

./: .gitignore  GNUmakefile  LICENSE  README  dub.json  meson.build  windows.mak
build-aux/: magickVersion.sh
dmagick/: Array.d  CoderInfo.d  Color.d  ColorCMYK.d  ColorGray.d  ColorHSL.d  ColorRGB.d  ColorYUV.d  DrawingContext.d  Exception.d  Geometry.d  Image.d  ImageView.d  Montage.d  Options.d  Utils.d
dmagick/c/: MagickCore.d  accelerate.d  animate.d  annotate.d  artifact.d  attribute.d  blob.d  cache.d  cacheView.d  channel.d  cipher.d  client.d  coder.d  color.d  colormap.d  colorspace.d  compare.d  composite.d  compress.d  configure.d  constitute.d  decorate.d  deprecate.d  display.d  distort.d  draw.d  effect.d  enhance.d  exception.d  feature.d  fourier.d  fx.d  gem.d  geometry.d  hashmap.d  histogram.d  identify.d  image.d  imageView.d  layer.d  (+48 more)
dmagick/internal/: Windows.d
docs/: dmagick.c.ddoc  dmagick.ddoc  style.css
examples/: draw.d  sigmoidalContrast.d
